# lieb_car_api

./: .gitignore  README.md  alembic.ini  cars.db  pyproject.toml  requirements.txt
lieb_car_api/: app.py  database.py  models.py  pyproject.toml  routers.py  schemas.py
migration/: env.py
migration/versions/: a766582ff9db_create_cars_table.py
