[project]
name = "lieb-car-api"
version = "0.1.0"
description = "A modern API with FastAPI framework"
authors = [
  { name = "Marcio Nitao", email = "marcionitao@gmail.com" }
]

[tool.ruff]
line-length = 79
extend-exclude = ["migrations"]
target-version = "py313"

[tool.ruff.lint]
preview = true
select = ["E", "F", "I", "PT", "B", "ASYNC", "W", "PL"]
ignore = ["E501"]

[tool.ruff.format]
preview = true
quote-style = "single"

[tool.taskipy.tasks]
run = "fastapi dev lieb_car_api/app.py"
freeze = "pip freeze > requirements.txt"
